vision-aid-prototype-v1/styles/globals.css
/*
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}


@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}
*/

html,
body,
body > div:first-child,
div#__next,
div#__next > div {
  height: 100%;
}

:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;

  --foreground-rgb: 238, 240, 241;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: rgba(235, 235, 235, 255);

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

/*@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}*/

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

nav {
  margin: 5px auto 20px;
  padding: 10px 0;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  border-bottom: 1px solid #ddd;
}
nav a {
  margin-left: 200px;
}
nav .logo {
  margin-left: auto;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom, transparent, rgba(235, 235, 235, 255))
    rgba(235, 235, 235, 255);
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

/*html {
    background-color: darkseagreen;
}*/

h2 {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 20px;
  text-align: center;
}

div,
p,
label {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 15px;
  text-align: center;
}

.api-response {
  display: inline-block;
  vertical-align: top;
}

.api-entries {
  display: inline-block;
  vertical-align: top;
  max-width: 50%;
}

.api-hospitals {
  display: inline-block;
  vertical-align: top;
  max-width: 50%;
}

.center {
  margin-left: auto;
  margin-right: auto;
}

#mobileTrainingRequiredFields {
  display: none;
}

#computerTrainingRequiredFields {
  display: none;
}

#orientationMobilityTrainingRequiredFields {
  display: none;
}

#visionEnhancementTrainingRequiredFields {
  display: none;
}

#comprehensiveLowVisionEvaluationTrainingRequiredFields {
  display: none;
}

#counsellingEducationTrainingRequiredFields {
  display: none;
}

#addCounsellingTypeContainer {
  display: none;
}

#addTrainingTypeContainer {
  display: none;
}

#removeCounsellingTypeContainer {
  display: none;
}

#removeTrainingTypeContainer {
  display: none;
}

#addTrainingSubTypeContainer {
  display: none;
}

.container {
  border: 1px solid #ccc;
  border-radius: 16px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  background-color: white;
  margin-bottom: 20px !important;
}

.beneficiary-child-container {
  width: 60%;
}

.user-profile-card {
  /* width: 450px; */
  width: 100%;
  border: 1px solid #ccc;
  border-radius: 16px;
  padding: 16px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  background-color: white;
  /* margin-left: 10px;
  margin-bottom: 80px !important; */
  text-align: left;
  block-size: fit-content;
  float: left;
}

.user-name {
  font-weight: bold;
  font-size: 18px !important;
  display: inline;
  padding: 10px;
}

.profile-image {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin: 10px auto;
  display: block;
  object-fit: cover;
  margin-left: 0px;
  display: inline;
  padding: 10px;
}

.profile-info {
  text-align: left;
}

.text-align-left {
  text-align: left;
}

.user-profile-card h2 {
  font-size: 5px;
  text-align: left;
  margin-top: 0px;
}

.profile-info p {
  margin: 5px 0;
  font-size: 14px;
  color: #777;
  text-align: left;
}

.profile-info table {
  margin: 10px auto;
  border-collapse: collapse;
  width: 100%;
}

.profile-info table tr td {
  padding: 5px;
  width: 50%;
}

.profile-info table tr td:first-child {
  text-align: left;
  color: #777;
}

.new-beneficiary-page {
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 50px;
}

.horizontal-line {
  width: 100%;
  height: 1px;
  background: grey;
}

h2 {
  text-align: left;
}

.table {
  border-radius: 10px;
}
.beneficiary-card {
  block-size: fit-content;
}

.beneficiary-table {
  text-align: left;
  border: #00000010;
  border-radius: 10px;
  width: 600px;
}

.beneficiary-table table td th {
  background-color: white;
}

.thead-dark {
  background-color: #b8d1ba;
}

.divider {
  width: 5px;
  height: auto;
  display: inline-block;
}

.value-small {
  font-size: 16px;
}

.text-align-right {
  text-align: right;
  align-items: right;
  align-self: right;
  float: right;
}

.flex-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  align-self: center;
}

.flex-container-vertical {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  align-self: center;
}

.align-center-content {
  vertical-align: middle;
  display: table-cell;
}

.align-center-parent {
  vertical-align: middle;
  display: inline-block;
}

.save-button {
  background-color: #1b5e20;
  border-radius: 2px;
  width: 100%;
  text-align: center;
  font-weight: bold;
  color: #fff;
  cursor: pointer;
}

.profile-card-select {
  width: 100%;
  /* padding: 10px; */
  border-radius: 2px;
  /* border: 1px solid #ccc; */
  /* margin-bottom: 10px; */
}

.profile-card-input {
  width: 100%;
  /* padding: 10px; */
  border-radius: 2px;
  /* border: 1px solid #ccc; */
  /* margin-bottom: 10px; */
}

.nopadding {
  padding: 0 !important;
  margin: 0 !important;
}

